# piccante

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  Makefile  README.md  access.h  appveyor.yml  commons.h  compila.scr  compila_cineca.scr  compila_cineca.sh  compila_juqueen.scr  compile_a_specific_main_on_fermi.sh  compile_on_cnafhpc.sh  compile_on_cnafhpc_intel.sh  compile_on_fermi.sh  compile_on_galileo.sh  compile_on_juqueen.sh  current.cpp  current.h  debug_compila.scr  debug_compile_on_fermi.sh  diag_manager.cpp  diag_manager.h  em_field.cpp  em_field.h  grid.cpp  grid.h  inputPiccante.json  jsonnames.h  jsonparser.cpp  jsonparser.h  main-1.cpp  main-piccante.cpp  makefile  makefile.cineca.xl  makefile.fermi-O5strict.xl  makefile.fermi.xl  makefile.galileo  (+16 more)
cmake/: sobol.patch
cmake/Modules/: FindFFTW.cmake  FindJsonCpp.cmake
doc/: jsoncpp_manual_install.md
doc/src/: piccante_guide.tex
examples/: 1d_TNSA.cpp  1d_solitons.cpp  1d_wakefield.cpp  2d_grating.cpp  2d_twostream.cpp  2d_twostream_no_output.cpp  2d_twostream_scaling.cpp  2d_twostream_scaling_no_noutput.cpp  2d_wakefield.cpp  2d_wakefield_no_output.cpp  3d_twostream.cpp  3d_twostream_no_output.cpp  3d_twostream_outputParamScan.cpp  3d_twostream_scaling.cpp  3d_twostream_scaling_no_output.cpp  3d_wakefield.cpp  3d_wakefield_no_output.cpp  TEST_wakefield_2d.cpp  TEST_wakefield_2d_no_output.cpp  TEST_wakefield_3d.cpp  TEST_wakefield_3d_no_output.cpp  inputPiccante-clusters.json  inputPiccante-default.json  inputPiccante-landauDamping.json  inputPiccante-twostream.json  inputPiccante-wakefield.json  inputPiccante.json  inputPiccante2.json  main-1.cpp  main-clusters.cpp  main-json.cpp  main-landau-damping.cpp  main-solitons.cpp  simple_1d_wakefield.cpp
examples/MAINS/: 1d_TNSA.cpp  1d_solitons.cpp  1d_wakefield.cpp  2d_grating.cpp  2d_twostream.cpp  2d_twostream_no_output.cpp  2d_twostream_scaling.cpp  2d_twostream_scaling_no_noutput.cpp  2d_wakefield.cpp  2d_wakefield_no_output.cpp  3d_twostream.cpp  3d_twostream_no_output.cpp  3d_twostream_outputParamScan.cpp  3d_twostream_scaling.cpp  3d_twostream_scaling_no_output.cpp  3d_wakefield.cpp  3d_wakefield_no_output.cpp  clusters.cpp  landau_damping.cpp
json/: json.h
rapidjson/msinttypes/: inttypes.h
run/: cnaf_gnu_144.sh  cnaf_ifort_144.sh  cnaf_intel_144.sh  cnaf_phi.txt  fermi-1024.cmd  fermi-1024.debug.cmd  fermi-2concurrent_on_128.cmd  fermi-4concurrent_on_1024.cmd  fermi-512.cmd  fermi-64.cmd  fermi-8100.cmd  fermi-8concurrent_on_1024.cmd  marconi-64.cmd
script/: make.fermi.perf.sh
script/run/: cnaf_gnu_144.sh  fermi-16concurrent_on_1024.cmd  fermi-256.cmd  galileo-64.cmd  marconi-knl-68.cmd
src/: commons.h  current.cpp  current.h  em_field.cpp  em_field.h  grid.cpp  grid.h  jsoncpp.cpp  jsoncpp.h  jsonnames.h  jsonparser.cpp  jsonparser.h  main-devel.cpp  main-piccante.cpp  main-piccante.h  output_manager.cpp  output_manager.h  packages.config  particle_species.cpp  particle_species.h  piccante.vcxproj  piccante.vcxproj.filters  preproc_defs.h  sobol.cpp  sobol.hpp  structures.cpp  structures.h  utilities.cpp  utilities.h
src/json/: json-forwards.h  json.h
src/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filestream.h  filewritestream.h  memorybuffer.h  memorystream.h  prettywriter.h  rapidjson.h  reader.h  stringbuffer.h  writer.h
src/rapidjson/error/: en.h  error.h
src/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  stack.h  strfunc.h  strtod.h
src/rapidjson/msinttypes/: inttypes.h  stdint.h
